1998-04-03  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-dateedit.c (fill_time_popup): Make the top boundary inclusive

1998-04-02  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gtkcalendar.[ch]: Update to latest version from gcalendar cvs module.

1998-04-01  Arturo Espinosa  <arturo@nuclecu.unam.mx>

	* gtkcalendar.c (gtk_calendar_select_month,
	gtk_calendar_select_day): Don't paint unless the widget is drawable!

1998-04-01  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-dateedit.c, gnome-dateedit.h: New widget for editing a
	date/time. 

	* gtkcalendar.c (gtk_calendar_class_init): Declare signal
	"day_selected"; 
	(gtk_calendar_marshall_date): Marshaller for new signal.
	(gtk_calendar_main_button): when a click happens in a day, emit
	the signal day_changed.
	
1998-04-01  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gtkcalendar.[ch]: Updated to latest version from gcalendar
	module.

1998-03-31  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gtkcalendar.c: Added Shawn's and Cesar's calendar widget to the
	gnome-libs. 

1998-03-30  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-icon-list.c (gnome_icon_list_moveto): Finished
	implementing moveto routine.  It only supports vertical alignment,
	as the icon list tries to display only whole columns and thus
	disable horizontal scrolling.

	* gnome-icon-list.h: New function gnome_icon_list_get_icon_at().
	Returns the index of the icon that is under the specified
	coordinates, or -1 if the coordinates are over white space.

	* gnome-icon-list.c: Added missing functionality regarding
	selecting/unselecting of icons.

1998-03-27  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-icon-list.c (draw_icon): Only try to set the masks if the pixmap exists.
	(get_icon_num_from_xy): Fixed a couple of off-by-one errors.

Sat Mar 28 18:12:33 CET 1998  Eckehard Berns  <eb@berns.prima.de>

	* gnome-stock{,-imlib}.[ch], stock_demo.c: Added more of tigert's
	pixmaps.
